--- a/mogo-apps-ios/saving-history/SavingHistory.storyboard
+++ b/mogo-apps-ios/saving-history/SavingHistory.storyboard
@@ -11,16 +11,16 @@
         <!--Saving History Screen-->
         <scene sceneID="407-Sc-q3w">
             <objects>
-                <viewController id="I0S-ZD-j0a" customClass="SavingHistoryScreen" customModule="mogo_apps_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="savingHistory" id="I0S-ZD-j0a" customClass="SavingHistoryScreen" customModule="mogo_apps_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sZS-Nf-GPr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G3O-mT-VXY">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G3O-mT-VXY">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="54" id="rdD-aH-shX">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="54" id="rdD-aH-shX" customClass="SavingHistoryCell" customModule="mogo_apps_ios" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="54"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rdD-aH-shX" id="3go-B0-8Fj">
@@ -36,8 +36,11 @@
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="646-Th-T2E">
-                                                    <rect key="frame" x="20" y="7" width="30" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="typeTitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="646-Th-T2E">
+                                                    <rect key="frame" x="20" y="7" width="62" height="21"/>
+                                                    <accessibility key="accessibilityConfiguration">
+                                                        <bool key="isElement" value="NO"/>
+                                                    </accessibility>
                                                     <fontDescription key="fontDescription" name="SFProText-Bold" family="SF Pro Text" pointSize="16"/>
                                                     <color key="textColor" red="0.092533282940000003" green="0.47499495739999997" blue="0.43137055639999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
@@ -51,16 +54,31 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="kwC-eD-W6f" firstAttribute="leading" secondItem="3go-B0-8Fj" secondAttribute="leading" constant="18" id="1Ig-3M-bT5"/>
-                                                <constraint firstItem="kwC-eD-W6f" firstAttribute="leading" secondItem="3go-B0-8Fj" secondAttribute="leading" constant="16" id="2cd-La-ZM5"/>
                                                 <constraint firstAttribute="trailing" secondItem="sEg-Yj-ckZ" secondAttribute="trailing" constant="18" id="8BQ-4Z-2oF"/>
                                                 <constraint firstItem="646-Th-T2E" firstAttribute="leading" secondItem="3go-B0-8Fj" secondAttribute="leading" constant="18" id="S4Q-J9-oFa"/>
                                                 <constraint firstItem="sEg-Yj-ckZ" firstAttribute="centerY" secondItem="3go-B0-8Fj" secondAttribute="centerY" id="eBy-wS-4f8"/>
                                                 <constraint firstItem="kwC-eD-W6f" firstAttribute="leading" secondItem="646-Th-T2E" secondAttribute="leading" id="tfM-yh-eHw"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <accessibility key="accessibilityConfiguration" hint="savingHistoryCell" identifier="savingHistoryCell" label="savingHistoryCell">
+                                            <accessibilityTraits key="traits" searchField="YES"/>
+                                            <bool key="isElement" value="NO"/>
+                                        </accessibility>
+                                        <connections>
+                                            <outlet property="amount" destination="sEg-Yj-ckZ" id="E0I-91-b7P"/>
+                                            <outlet property="date" destination="kwC-eD-W6f" id="C4x-Ju-T8l"/>
+                                            <outlet property="typeTitle" destination="646-Th-T2E" id="oIF-cx-t5y"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ea4-4I-b51">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Saving History" leftItemsSupplementBackButton="YES" id="VPj-z9-aeC"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="iSC-57-hbc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
