--- a/mogo-apps-ios/home/Home.storyboard
+++ b/mogo-apps-ios/home/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2JD-Mz-5QX">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -21,17 +21,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Home" translatesAutoresizingMaskIntoConstraints="NO" id="aQI-Du-Lw0">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="258"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Home" translatesAutoresizingMaskIntoConstraints="NO" id="aQI-Du-Lw0">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="258"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MoneyEmoji" translatesAutoresizingMaskIntoConstraints="NO" id="M4S-vq-4k6">
-                                <rect key="frame" x="142" y="54" width="107" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MoneyEmoji" translatesAutoresizingMaskIntoConstraints="NO" id="M4S-vq-4k6">
+                                <rect key="frame" x="142" y="48.000000000000007" width="107" height="66.666666666666686"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qv5-y6-lHZ" customClass="MyButton" customModule="mogo_apps_ios" customModuleProvider="target">
-                                <rect key="frame" x="98" y="193" width="194" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have saved" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocB-ww-IGy">
+                                <rect key="frame" x="135.33333333333334" y="118.66666666666669" width="119.66666666666666" height="20"/>
+                                <fontDescription key="fontDescription" name="SFProText-Regular" family="SF Pro Text" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IDR 3000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="opk-kM-F52">
+                                <rect key="frame" x="153" y="142.66666666666666" width="84" height="24"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qv5-y6-lHZ" customClass="MyButton" customModule="mogo_apps_ios" customModuleProvider="target">
+                                <rect key="frame" x="100" y="180.66666666666666" width="190" height="32"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="17"/>
                                 <state key="normal" title="Add Goal">
@@ -41,23 +50,37 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="rounded" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="IDR 3000" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Rit-Wo-hHa">
-                                <rect key="frame" x="75" y="130" width="240" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="34"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="You have saved" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dcy-QY-HEn">
-                                <rect key="frame" x="122" y="97" width="147" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="17"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NotifEmpty" translatesAutoresizingMaskIntoConstraints="NO" id="dxJ-f2-VM2">
+                                <rect key="frame" x="344" y="49" width="30" height="50"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VJE-Fl-jKn"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="opk-kM-F52" firstAttribute="top" secondItem="ocB-ww-IGy" secondAttribute="bottom" constant="4" id="2JW-Vw-wrg"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="dxJ-f2-VM2" secondAttribute="trailing" constant="16" id="5qK-t0-uJL"/>
+                            <constraint firstItem="M4S-vq-4k6" firstAttribute="centerX" secondItem="aaI-2e-hao" secondAttribute="centerX" id="ByG-Xa-Q1e"/>
+                            <constraint firstItem="dxJ-f2-VM2" firstAttribute="leading" secondItem="M4S-vq-4k6" secondAttribute="trailing" constant="95" id="Dxu-JY-i63"/>
+                            <constraint firstItem="M4S-vq-4k6" firstAttribute="top" secondItem="aaI-2e-hao" secondAttribute="topMargin" constant="4" id="ImB-9A-NOR"/>
+                            <constraint firstItem="aQI-Du-Lw0" firstAttribute="top" secondItem="aaI-2e-hao" secondAttribute="top" id="Ld5-Ku-3t1"/>
+                            <constraint firstItem="dxJ-f2-VM2" firstAttribute="top" secondItem="VJE-Fl-jKn" secondAttribute="top" constant="5" id="Oqf-v6-71q"/>
+                            <constraint firstItem="aQI-Du-Lw0" firstAttribute="leading" secondItem="aaI-2e-hao" secondAttribute="leading" id="PoO-qC-LUi"/>
+                            <constraint firstItem="opk-kM-F52" firstAttribute="centerX" secondItem="aaI-2e-hao" secondAttribute="centerX" id="Q4z-F5-V7s"/>
+                            <constraint firstItem="dxJ-f2-VM2" firstAttribute="leading" secondItem="M4S-vq-4k6" secondAttribute="trailing" constant="95" id="TE2-Sh-rly"/>
+                            <constraint firstItem="qv5-y6-lHZ" firstAttribute="leading" secondItem="VJE-Fl-jKn" secondAttribute="leading" constant="100" id="Vc9-Y0-Xou"/>
+                            <constraint firstItem="dxJ-f2-VM2" firstAttribute="top" secondItem="VJE-Fl-jKn" secondAttribute="top" constant="5" id="Xmb-CM-QoD"/>
+                            <constraint firstItem="ocB-ww-IGy" firstAttribute="centerX" secondItem="aaI-2e-hao" secondAttribute="centerX" id="Z9C-uS-E7h"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="bottom" secondItem="aQI-Du-Lw0" secondAttribute="bottom" constant="552" id="f0H-4f-reD"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="dxJ-f2-VM2" secondAttribute="trailing" constant="16" id="fsA-GS-XU1"/>
+                            <constraint firstItem="ocB-ww-IGy" firstAttribute="top" secondItem="M4S-vq-4k6" secondAttribute="bottom" constant="4" id="k74-VH-ZiX"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="dxJ-f2-VM2" secondAttribute="trailing" constant="16" id="mYx-TY-9He"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="qv5-y6-lHZ" secondAttribute="trailing" constant="100" id="o7y-NF-kue"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="dxJ-f2-VM2" secondAttribute="trailing" constant="16" id="qdF-Eg-LIa"/>
+                            <constraint firstItem="M4S-vq-4k6" firstAttribute="leading" secondItem="VJE-Fl-jKn" secondAttribute="leading" constant="142" id="r8a-oO-PBc"/>
+                            <constraint firstItem="qv5-y6-lHZ" firstAttribute="top" secondItem="opk-kM-F52" secondAttribute="bottom" constant="14" id="whX-Mf-6Y5"/>
+                            <constraint firstItem="aQI-Du-Lw0" firstAttribute="trailing" secondItem="aaI-2e-hao" secondAttribute="trailing" id="xLR-Yy-wic"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="M4S-vq-4k6" secondAttribute="trailing" constant="141" id="ywP-ZK-lGw"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5OA-gs-EOq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -73,6 +96,7 @@
     <resources>
         <image name="Home" width="1476.3333740234375" height="976.66668701171875"/>
         <image name="MoneyEmoji" width="203.66667175292969" height="66.666664123535156"/>
+        <image name="NotifEmpty" width="48" height="50"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
