--- a/mogo-apps-ios/home/Home.storyboard
+++ b/mogo-apps-ios/home/Home.storyboard
@@ -53,35 +53,78 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NotifEmpty" translatesAutoresizingMaskIntoConstraints="NO" id="dxJ-f2-VM2">
                                 <rect key="frame" x="344" y="49" width="30" height="50"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goal Progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ppk-Ka-gVD">
+                                <rect key="frame" x="19" y="291" width="144" height="27"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Magnifier" translatesAutoresizingMaskIntoConstraints="NO" id="m50-Gk-hjJ">
+                                <rect key="frame" x="342" y="293" width="24" height="22"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" misplaced="YES" image="Sort" translatesAutoresizingMaskIntoConstraints="NO" id="dCa-7q-Kzy">
+                                <rect key="frame" x="308.33333333333331" y="293" width="24" height="22"/>
+                            </imageView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ROL-us-md1">
+                                <rect key="frame" x="19" y="337" width="347" height="32"/>
+                                <segments>
+                                    <segment title="Active"/>
+                                    <segment title="Completed"/>
+                                </segments>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C0m-TQ-ycU">
+                                <rect key="frame" x="19" y="378" width="347" height="422"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VJE-Fl-jKn"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="C0m-TQ-ycU" firstAttribute="trailing" secondItem="ROL-us-md1" secondAttribute="trailing" id="0ec-rb-AgL"/>
                             <constraint firstItem="opk-kM-F52" firstAttribute="top" secondItem="ocB-ww-IGy" secondAttribute="bottom" constant="4" id="2JW-Vw-wrg"/>
                             <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="dxJ-f2-VM2" secondAttribute="trailing" constant="16" id="5qK-t0-uJL"/>
                             <constraint firstItem="M4S-vq-4k6" firstAttribute="centerX" secondItem="aaI-2e-hao" secondAttribute="centerX" id="ByG-Xa-Q1e"/>
+                            <constraint firstItem="C0m-TQ-ycU" firstAttribute="leading" secondItem="ROL-us-md1" secondAttribute="leading" id="D38-MT-Vlz"/>
                             <constraint firstItem="dxJ-f2-VM2" firstAttribute="leading" secondItem="M4S-vq-4k6" secondAttribute="trailing" constant="95" id="Dxu-JY-i63"/>
                             <constraint firstItem="M4S-vq-4k6" firstAttribute="top" secondItem="aaI-2e-hao" secondAttribute="topMargin" constant="4" id="ImB-9A-NOR"/>
+                            <constraint firstItem="ROL-us-md1" firstAttribute="top" secondItem="ppk-Ka-gVD" secondAttribute="bottom" constant="19" id="Kew-fM-7RH"/>
                             <constraint firstItem="aQI-Du-Lw0" firstAttribute="top" secondItem="aaI-2e-hao" secondAttribute="top" id="Ld5-Ku-3t1"/>
+                            <constraint firstItem="ppk-Ka-gVD" firstAttribute="leading" secondItem="VJE-Fl-jKn" secondAttribute="leading" constant="19" id="MBp-8h-7ZG"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="m50-Gk-hjJ" secondAttribute="trailing" constant="24" id="Nc8-l3-jTm"/>
+                            <constraint firstItem="ROL-us-md1" firstAttribute="leading" secondItem="ppk-Ka-gVD" secondAttribute="leading" id="OWk-yi-dof"/>
                             <constraint firstItem="dxJ-f2-VM2" firstAttribute="top" secondItem="VJE-Fl-jKn" secondAttribute="top" constant="5" id="Oqf-v6-71q"/>
                             <constraint firstItem="aQI-Du-Lw0" firstAttribute="leading" secondItem="aaI-2e-hao" secondAttribute="leading" id="PoO-qC-LUi"/>
                             <constraint firstItem="opk-kM-F52" firstAttribute="centerX" secondItem="aaI-2e-hao" secondAttribute="centerX" id="Q4z-F5-V7s"/>
                             <constraint firstItem="dxJ-f2-VM2" firstAttribute="leading" secondItem="M4S-vq-4k6" secondAttribute="trailing" constant="95" id="TE2-Sh-rly"/>
+                            <constraint firstItem="ROL-us-md1" firstAttribute="trailing" secondItem="m50-Gk-hjJ" secondAttribute="trailing" id="UZs-1j-PFt"/>
                             <constraint firstItem="qv5-y6-lHZ" firstAttribute="leading" secondItem="VJE-Fl-jKn" secondAttribute="leading" constant="100" id="Vc9-Y0-Xou"/>
                             <constraint firstItem="dxJ-f2-VM2" firstAttribute="top" secondItem="VJE-Fl-jKn" secondAttribute="top" constant="5" id="Xmb-CM-QoD"/>
+                            <constraint firstItem="m50-Gk-hjJ" firstAttribute="top" secondItem="aQI-Du-Lw0" secondAttribute="bottom" constant="35" id="YBy-1i-0xR"/>
                             <constraint firstItem="ocB-ww-IGy" firstAttribute="centerX" secondItem="aaI-2e-hao" secondAttribute="centerX" id="Z9C-uS-E7h"/>
                             <constraint firstItem="VJE-Fl-jKn" firstAttribute="bottom" secondItem="aQI-Du-Lw0" secondAttribute="bottom" constant="552" id="f0H-4f-reD"/>
                             <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="dxJ-f2-VM2" secondAttribute="trailing" constant="16" id="fsA-GS-XU1"/>
+                            <constraint firstItem="VJE-Fl-jKn" firstAttribute="bottom" secondItem="C0m-TQ-ycU" secondAttribute="bottom" constant="10" id="g76-98-QGs"/>
                             <constraint firstItem="ocB-ww-IGy" firstAttribute="top" secondItem="M4S-vq-4k6" secondAttribute="bottom" constant="4" id="k74-VH-ZiX"/>
                             <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="dxJ-f2-VM2" secondAttribute="trailing" constant="16" id="mYx-TY-9He"/>
                             <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="qv5-y6-lHZ" secondAttribute="trailing" constant="100" id="o7y-NF-kue"/>
                             <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="dxJ-f2-VM2" secondAttribute="trailing" constant="16" id="qdF-Eg-LIa"/>
                             <constraint firstItem="M4S-vq-4k6" firstAttribute="leading" secondItem="VJE-Fl-jKn" secondAttribute="leading" constant="142" id="r8a-oO-PBc"/>
+                            <constraint firstItem="m50-Gk-hjJ" firstAttribute="leading" secondItem="dCa-7q-Kzy" secondAttribute="trailing" constant="9.5" id="sUp-1F-z69"/>
+                            <constraint firstItem="dCa-7q-Kzy" firstAttribute="top" secondItem="aQI-Du-Lw0" secondAttribute="bottom" constant="35" id="whP-pG-t1F"/>
                             <constraint firstItem="qv5-y6-lHZ" firstAttribute="top" secondItem="opk-kM-F52" secondAttribute="bottom" constant="14" id="whX-Mf-6Y5"/>
                             <constraint firstItem="aQI-Du-Lw0" firstAttribute="trailing" secondItem="aaI-2e-hao" secondAttribute="trailing" id="xLR-Yy-wic"/>
+                            <constraint firstItem="ppk-Ka-gVD" firstAttribute="top" secondItem="aQI-Du-Lw0" secondAttribute="bottom" constant="33" id="xMK-Ou-tkt"/>
                             <constraint firstItem="VJE-Fl-jKn" firstAttribute="trailing" secondItem="M4S-vq-4k6" secondAttribute="trailing" constant="141" id="ywP-ZK-lGw"/>
+                            <constraint firstItem="C0m-TQ-ycU" firstAttribute="top" secondItem="ROL-us-md1" secondAttribute="bottom" constant="10" id="zXF-lj-Xqg"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="AddGoalButton" destination="qv5-y6-lHZ" id="DTX-xo-ox6"/>
+                        <outlet property="GoalTableView" destination="C0m-TQ-ycU" id="6Zt-0p-Tli"/>
+                        <outlet property="LabelSaved" destination="ocB-ww-IGy" id="6xS-0d-cdM"/>
+                        <outlet property="MoneyGoalStatus" destination="opk-kM-F52" id="KN4-N4-A3M"/>
+                        <outlet property="SegmentedGoal" destination="ROL-us-md1" id="0st-jY-VWI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5OA-gs-EOq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -95,8 +138,10 @@
     </designables>
     <resources>
         <image name="Home" width="1476.3333740234375" height="976.66668701171875"/>
+        <image name="Magnifier" width="50" height="50"/>
         <image name="MoneyEmoji" width="203.66667175292969" height="66.666664123535156"/>
         <image name="NotifEmpty" width="48" height="50"/>
+        <image name="Sort" width="57.333332061767578" height="50"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
