--- a/mogo-apps-ios/create-goals/CreateGoals.storyboard
+++ b/mogo-apps-ios/create-goals/CreateGoals.storyboard
@@ -16,9 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sJ1-F6-QHb">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sJ1-F6-QHb">
                                 <rect key="frame" x="0.0" y="88" width="390" height="722"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <sections/>
                                 <connections>
@@ -29,6 +28,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="MXd-aU-0hO"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sJ1-F6-QHb" firstAttribute="leading" secondItem="MXd-aU-0hO" secondAttribute="leading" id="Hlr-sa-xZb"/>
+                            <constraint firstItem="sJ1-F6-QHb" firstAttribute="bottom" secondItem="MXd-aU-0hO" secondAttribute="bottom" id="QRg-ux-QeA"/>
+                            <constraint firstItem="sJ1-F6-QHb" firstAttribute="top" secondItem="MXd-aU-0hO" secondAttribute="top" id="dc1-TP-aaJ"/>
+                            <constraint firstItem="sJ1-F6-QHb" firstAttribute="trailing" secondItem="MXd-aU-0hO" secondAttribute="trailing" id="tta-sY-XEq"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Create Goals" id="QSC-js-Dcn">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="8FQ-Th-ulK">
