--- a/mogo-apps-ios/create-goals/create-goals cell/CreateGoalHeaderCell.xib
+++ b/mogo-apps-ios/create-goals/create-goals cell/CreateGoalHeaderCell.xib
@@ -4,54 +4,56 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="createGoalHeaderId" id="KGk-i7-Jjw" customClass="CreateGoalHeaderCell" customModule="mogo_apps_ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="createGoalHeaderId" rowHeight="140" id="KGk-i7-Jjw" customClass="CreateGoalHeaderCell" customModule="mogo_apps_ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="IconCollectionCell" customModule="mogo_apps_ios" customModuleProvider="target">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FeW-pN-1L5">
-                        <rect key="frame" x="120" y="20" width="80" height="80"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="80" id="FmV-s6-Vok"/>
-                            <constraint firstAttribute="width" constant="80" id="O9v-Rt-BeC"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Icon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fxc-D9-DF1">
-                        <rect key="frame" x="31" y="110" width="258" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lYN-Jb-xSy">
-                        <rect key="frame" x="120" y="20" width="80" height="80"/>
-                    </button>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3Hg-bb-oEq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cool" translatesAutoresizingMaskIntoConstraints="NO" id="43i-41-fGE">
+                                <rect key="frame" x="120" y="16" width="80" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nI5-Jh-gxw">
+                                <rect key="frame" x="120" y="16" width="80" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Edit Icon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rbb-Ce-xL0">
+                                <rect key="frame" x="134" y="104" width="53" height="16"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
                 </subviews>
-                <constraints>
-                    <constraint firstItem="lYN-Jb-xSy" firstAttribute="bottom" secondItem="FeW-pN-1L5" secondAttribute="bottom" id="4hI-be-dSA"/>
-                    <constraint firstItem="fxc-D9-DF1" firstAttribute="top" secondItem="FeW-pN-1L5" secondAttribute="bottom" constant="10" id="5mg-WQ-qrz"/>
-                    <constraint firstItem="lYN-Jb-xSy" firstAttribute="trailing" secondItem="FeW-pN-1L5" secondAttribute="trailing" id="9mj-xS-vOO"/>
-                    <constraint firstItem="lYN-Jb-xSy" firstAttribute="leading" secondItem="FeW-pN-1L5" secondAttribute="leading" id="LKn-wg-aLS"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="fxc-D9-DF1" secondAttribute="trailing" constant="15" id="LSj-sb-yih"/>
-                    <constraint firstItem="FeW-pN-1L5" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="MbV-es-CXN"/>
-                    <constraint firstItem="lYN-Jb-xSy" firstAttribute="top" secondItem="FeW-pN-1L5" secondAttribute="top" id="arY-D2-JeH"/>
-                    <constraint firstItem="FeW-pN-1L5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="m54-nR-6uJ"/>
-                    <constraint firstItem="fxc-D9-DF1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="15" id="upH-Wj-ME8"/>
-                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="buttonIcon" destination="lYN-Jb-xSy" id="CWB-NZ-hs5"/>
-                <outlet property="imageIcon" destination="FeW-pN-1L5" id="GK7-po-kkK"/>
-                <outlet property="labelIcon" destination="fxc-D9-DF1" id="sN0-5W-aHv"/>
+                <outlet property="buttonIcon" destination="nI5-Jh-gxw" id="Thr-NU-ib0"/>
+                <outlet property="imageIcon" destination="43i-41-fGE" id="cCX-ZH-0SG"/>
+                <outlet property="labelIcon" destination="rbb-Ce-xL0" id="ras-26-9SA"/>
             </connections>
-            <point key="canvasLocation" x="132" y="124"/>
+            <point key="canvasLocation" x="131.8840579710145" y="120.53571428571428"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="cool" width="512" height="512"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
