--- a/mogo-apps-ios/create-goals/create-goals cell/CreateGoalInputCell.xib
+++ b/mogo-apps-ios/create-goals/create-goals cell/CreateGoalInputCell.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,41 +17,65 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="asdasdasdasdasda" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHV-jE-kED">
-                        <rect key="frame" x="10" y="2" width="115" height="51"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Please input here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0F6-Vw-Sd9">
-                        <rect key="frame" x="130" y="5.5" width="180" height="44"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ab-kO-ql5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qit-IP-uHU">
+                                <rect key="frame" x="38.666666666666657" y="17.333333333333336" width="41.333333333333343" height="20.333333333333336"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wi7-zb-sEK">
+                                <rect key="frame" x="109" y="10" width="197" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="197" id="eZx-RZ-rkg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S0i-0K-oMa">
+                                <rect key="frame" x="12.000000000000002" y="12" width="21.666666666666671" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="21.670000000000002" id="khc-wT-CSU"/>
+                                </constraints>
+                                <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="lock.fill" catalog="system"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="xcA-pD-YdL"/>
-                            <constraint firstAttribute="width" constant="180" id="zDp-ep-kG0"/>
+                            <constraint firstAttribute="bottom" secondItem="wi7-zb-sEK" secondAttribute="bottom" constant="10" id="3XQ-fZ-2ip"/>
+                            <constraint firstItem="S0i-0K-oMa" firstAttribute="leading" secondItem="6ab-kO-ql5" secondAttribute="leading" constant="12" id="4oJ-zc-Lwp"/>
+                            <constraint firstItem="qit-IP-uHU" firstAttribute="leading" secondItem="S0i-0K-oMa" secondAttribute="trailing" constant="5" id="6MJ-dx-92V"/>
+                            <constraint firstAttribute="bottom" secondItem="S0i-0K-oMa" secondAttribute="bottom" constant="12" id="CP5-PN-fFC"/>
+                            <constraint firstItem="qit-IP-uHU" firstAttribute="centerY" secondItem="6ab-kO-ql5" secondAttribute="centerY" id="Dim-CK-ndA"/>
+                            <constraint firstItem="wi7-zb-sEK" firstAttribute="top" secondItem="6ab-kO-ql5" secondAttribute="top" constant="10" id="ERD-89-ENh"/>
+                            <constraint firstItem="wi7-zb-sEK" firstAttribute="leading" secondItem="qit-IP-uHU" secondAttribute="trailing" constant="29" id="IGi-bC-SO1"/>
+                            <constraint firstItem="S0i-0K-oMa" firstAttribute="top" secondItem="6ab-kO-ql5" secondAttribute="top" constant="12" id="TXI-RA-EAQ"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <textInputTraits key="textInputTraits"/>
-                        <connections>
-                            <outlet property="delegate" destination="KGk-i7-Jjw" id="k9d-ZS-wKK"/>
-                        </connections>
-                    </textField>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="hHV-jE-kED" secondAttribute="bottom" constant="2" id="2Gw-Vw-gcc"/>
-                    <constraint firstItem="hHV-jE-kED" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="8DY-5E-aQw"/>
-                    <constraint firstItem="hHV-jE-kED" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="EeR-sD-6F9"/>
-                    <constraint firstItem="0F6-Vw-Sd9" firstAttribute="leading" secondItem="hHV-jE-kED" secondAttribute="trailing" constant="5" id="akU-dH-TvP"/>
-                    <constraint firstAttribute="trailing" secondItem="0F6-Vw-Sd9" secondAttribute="trailing" constant="10" id="rwS-qH-Lf6"/>
-                    <constraint firstItem="0F6-Vw-Sd9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zS3-6B-1xv"/>
+                    <constraint firstItem="6ab-kO-ql5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="6nP-PC-F3N"/>
+                    <constraint firstAttribute="trailing" secondItem="6ab-kO-ql5" secondAttribute="trailing" id="OrI-BE-SzV"/>
+                    <constraint firstItem="6ab-kO-ql5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="SL8-KF-WoJ"/>
+                    <constraint firstAttribute="bottom" secondItem="6ab-kO-ql5" secondAttribute="bottom" id="mU5-5H-Xx1"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="textInput" destination="0F6-Vw-Sd9" id="PGF-lW-bRi"/>
-                <outlet property="titleLabel" destination="hHV-jE-kED" id="jzr-cW-ojo"/>
+                <outlet property="buttonLock" destination="S0i-0K-oMa" id="JAx-W9-TDA"/>
+                <outlet property="textInput" destination="wi7-zb-sEK" id="4Yy-Pq-Uq5"/>
+                <outlet property="titleLabel" destination="qit-IP-uHU" id="lgw-P0-9eY"/>
             </connections>
-            <point key="canvasLocation" x="132" y="124"/>
+            <point key="canvasLocation" x="130.76923076923077" y="123.34123222748815"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="lock.fill" catalog="system" width="128" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
